# asyncapi

./: .gitignore  .gitmodules  Cargo.toml  README.md  Readme.md  build.rs
.github/workflows/: rust.yml
generate-tests/: Cargo.toml
generate-tests/src/: main.rs
src/: api.rs  asyncapi.rs  channel.rs  channel_binding.rs  components.rs  correlation_id.rs  discriminator.rs  example.rs  external_documentation.rs  info.rs  lib.rs  message.rs  message_binding.rs  message_trait.rs  operation_binding.rs  operation_trait.rs  parameter.rs  reference.rs  schema.rs  security_scheme.rs  server.rs  server_binding.rs  tag.rs  vec_or_single.rs
tests/: .gitignore  asyncapi.yml  test.rs  utoipa-asyncapi.yml
