[package]
name = "asyncapi"
version = "0.2.0"
edition = "2021"

authors = ["JP Stauffert","Kylian Lichtensteiger <ce76e2af@srylax.dev>"]
license = "MIT OR Apache-2.0"
keywords = ["asyncapi","async api"]
homepage = "https://github.com/open-home-dev/asyncapi"
repository = "https://github.com/open-home-dev/asyncapi"
description = "This crate aims to provide data structures that represent the AsyncAPI specification easily deserializable with serde."
readme = "README.md"

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.67"
serde_yaml = "0.9.21"
openapiv3 = { version = "1.0.2", optional = true }

[features]
openapi-schema = ["openapiv3"]
openapi-info = ["openapiv3"]

[workspace]
members = [
    "generate-tests"
]