[package]
name = "generate-tests"
version = "0.1.3"
edition = "2018"

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.67"
serde_yaml = "0.8.20"
indexmap = { version = "1.8.1", features = ["serde-1"] }
quote = "1.0.10"
convert_case = "0.4.0"
regex = "1.5.4"
paste = "1.0.5"
